5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1756_1189.log
== SUBMITION (2019-05-29 11:58:36) 
-- CODE:
a = int(input("Insira o tamanho do vetor: ")

s = "OSSO"
new = s.replace('O' , 'O')
print(new)
-- EXECUTION TIME:
0.149585
-- ERROR:
  File "/home/codebench/codes/1756/1189/main.py", line 3
    s = "OSSO"
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:58:39) 
-- CODE:
a = int(input("Insira o tamanho do vetor: ")

s = "OSSO"
new = s.replace('O' , 'O')
print(new)
-- ERROR:
File "XXXX", line 3
    s = "OSSO"
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:03:46) 
-- CODE:
a = int(input("Insira o tamanho do vetor: ")

s = "Osso"
new = s.replace('O' , 'O')
print(new)
-- ERROR:
File "XXXX", line 3
    s = "Osso"
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
